--- a/gaga_http_test/pubspec.yaml
+++ b/gaga_http_test/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
-  http: ^0.13.4
   intl: ^0.17.0
+
+  json_annotation: ^4.6.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.2.0
+  json_serializable: ^6.3.1
+  http: ^0.13.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
